--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
 		</script>
 
 		<meta http-equiv="content-security-policy" content=""><title>Home | JW Guitar Tabs</title><meta name="description" content="JW Guitar Tabs is a website where people who love our JW songs can\nenjoy playing the simplest tabs on their guitar." data-svelte="svelte-p7l4te">
-	<link rel="stylesheet" href="/internal/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/internal/assets/pages/__layout.svelte-65152709.css">
-	<link rel="stylesheet" href="/internal/assets/pages/index.svelte-be2c93a6.css">
-	<link rel="modulepreload" href="/internal/start-c1e11a20.js">
-	<link rel="modulepreload" href="/internal/chunks/vendor-a14c9fe5.js">
-	<link rel="modulepreload" href="/internal/chunks/preload-helper-eaf481c8.js">
-	<link rel="modulepreload" href="/internal/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/internal/pages/__layout.svelte-1a4c1c71.js">
-	<link rel="modulepreload" href="/internal/chunks/helperFunctions-2523e54d.js">
-	<link rel="modulepreload" href="/internal/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/internal/chunks/NewTabLink-c0c9f34a.js">
-	<link rel="modulepreload" href="/internal/pages/index.svelte-ae6713ed.js">
-	<link rel="modulepreload" href="/internal/chunks/MetaHead-2dfdfdb5.js"><script type="module">
-		import { start } from "/internal/start-c1e11a20.js";
+	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/vendor-77f1925a.css">
+	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/__layout.svelte-65152709.css">
+	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/index.svelte-be2c93a6.css">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-9f4f1bb3.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-a14c9fe5.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/paths-6ae34fac.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-1a4c1c71.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-2523e54d.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/navigation-bd39ff07.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-c0c9f34a.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/index.svelte-4d78c43d.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-2dfdfdb5.js"><script type="module">
+		import { start } from "/jw-guitar-tabs/internal/start-9f4f1bb3.js";
 		start({
 			target: document.querySelector("#svelte"),
-			paths: {"base":"","assets":""},
+			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
 			session: {},
 			route: true,
 			spa: false,
@@ -59,10 +59,10 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/internal/pages/__layout.svelte-1a4c1c71.js"),
-						import("/internal/pages/index.svelte-ae6713ed.js")
+					import("/jw-guitar-tabs/internal/pages/__layout.svelte-1a4c1c71.js"),
+						import("/jw-guitar-tabs/internal/pages/index.svelte-4d78c43d.js")
 				],
-				url: new URL("http://sveltekit-prerender/"),
+				url: new URL("http://sveltekit-prerender/jw-guitar-tabs"),
 				params: {}
 			}
 		});
@@ -155,15 +155,15 @@
 
 
 <h2>Songs Categories</h2>
-<div class="ui stackable three column grid"><div class="column card svelte-w4br78"><a href="/categories/kingdom-songs"><img src="/img/guitars/kingdom-guitar.jpg" alt="guitar image for kingdom category" class="svelte-w4br78">
+<div class="ui stackable three column grid"><div class="column card svelte-w4br78"><a href="/jw-guitar-tabs/categories/kingdom-songs"><img src="/img/guitars/kingdom-guitar.jpg" alt="guitar image for kingdom category" class="svelte-w4br78">
 				<p class="centered svelte-w4br78">Kingdom
 					Songs
 				</p></a>
-		</div><div class="column card svelte-w4br78"><a href="/categories/original-songs"><img src="/img/guitars/original-guitar.jpg" alt="guitar image for original category" class="svelte-w4br78">
+		</div><div class="column card svelte-w4br78"><a href="/jw-guitar-tabs/categories/original-songs"><img src="/img/guitars/original-guitar.jpg" alt="guitar image for original category" class="svelte-w4br78">
 				<p class="centered svelte-w4br78">Original
 					Songs
 				</p></a>
-		</div><div class="column card svelte-w4br78"><a href="/categories/children-songs"><img src="/img/guitars/children-guitar.jpg" alt="guitar image for children category" class="svelte-w4br78">
+		</div><div class="column card svelte-w4br78"><a href="/jw-guitar-tabs/categories/children-songs"><img src="/img/guitars/children-guitar.jpg" alt="guitar image for children category" class="svelte-w4br78">
 				<p class="centered svelte-w4br78">Children&#39;s
 					Songs
 				</p></a>
